  built-in is enabled. This will permit to separate the HTTP built-in in a
  different package.
- Fixed an undeclared global symbol "$imgfmt_lc" in 'traffacct.pm'.
- Fixed the MIME type of graphs in 'emailreports.pm' and in 'traffacct.pm' to
  honor the 'image_format' option. [#174]
- Fixed in 'emailreports.pm' to name each attached graph correctly.


3.9.0  - 14-Oct-2016
====================
- Added a complete graph for Linux Traffic Control with the 'tc' command. [#74]
- Added a complete graph for Chrony using the 'chronyc' command.
- Added a complete graph for generic sensors (in /sys/devices). [#159]
- Added the option 'cmd' in 'libvirt.pm' in order to be able to execute a
  custom command like 'virsh -r -c qemu:///session'.
  	(suggested by Pavel Bauer, pbauer AT algotech.cz)
- Added in 'libvirt.pm' the ability to support multiple disks and network
  interfaces for each virtual machine.
  	(suggested by Pavel Bauer, pbauer AT algotech.cz)
- Added in 'du.pm' the new 'extra_args' option to be able to include extra
  arguments to the 'du' command.
  	(suggested by Pete Perfetti, pete.perfetti AT protonmail.com)
- Added the new option 'priority' to set the priority value in which Monitorix
  will run.
- Added the new option 'image_format' to specify the file format of each
  generated graph. [#132]
- Added name substring match in 'process.pm'. [#136]
- Added the new option 'enable_hourly_view' which enables the ability to select
  the hourly view in the main page.
- Added the new option 'user_agent_id' which is used to define the string to
  identify Monitorix agent in the HTTP requests. That value is sent as the
  "User-Agent" header.
	(suggested by Dan Criel, dancriel AT gmail.com)
- Removed 'max_historic_years' limitation of 5 years. [#145]
- No longer needed to have also reports enabled in 'traffacct.pm' to generate
  daily traffic counters.
- Added a warning message in 'disk.pm' that if some of the disk devices defined