@@ -20,6 +20,9 @@
 - Fixed the MIME type of graphs in 'emailreports.pm' and in 'traffacct.pm' to
   honor the 'image_format' option. [#174]
 - Fixed in 'emailreports.pm' to name each attached graph correctly.
+- Fixed the message 'Odd number of elements in hash assignment' in
+  HTTPServer.pm line 58, generated by a malformed line in the 'htpasswd' file.
+  Now it warns about such malformed line in the HTTP built-in log.
 
 
 3.9.0  - 14-Oct-2016
